pod2deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pod2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pod2
  template:
    metadata:
      labels:
        app: pod2
    spec:
      containers:
      - name: pod2-container
        image: swapnajit007/myapache2
        ports:
        - containerPort: 80
