service1.yml
---
apiVersion: v1
kind: Service
metadata:  
  name: pod1-service
spec:
  selector:    
    app: pod1
  type: ClusterIP
  ports:  
  - name: pod1
    port: 80
    targetPort: 80
    protocol: TCP
