service2.yml
---
apiVersion: v1
kind: Service
metadata:  
  name: pod2-service
spec:
  selector:    
    app: pod2
  type: ClusterIP
  ports:  
  - name: pod2
    port: 90
    targetPort: 80
    protocol: TCP
