ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: hello
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:  
      - path: /pod1
        pathType: Prefix 
        backend:
          service:
            name: pod1-service
            port: 
              number: 80
      - path: /pod2 
        pathType: Prefix
        backend:
          service:
            name: pod2-service
            port: 
              number: 90
